--- a/company/war/index.html
+++ b/company/war/index.html
@@ -121,7 +121,7 @@
 	<!-- jQuery 2.1.3 -->
 	<script src="js/jquery/jquery-2.1.3.min.js"></script>
 	<!-- jQuery UI 1.11.2 -->
-	<script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js" type="text/javascript"></script>
+	<script src="js/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
 	<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 	<script>
 		$.widget.bridge('uibutton', $.ui.button);
